# br_market_calendar

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/br_market_calendar/: __init__.py  holidays.py
tests/: test_br_market_calendar.py
